fix navabar position mobile and input for cform7

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -32,7 +32,7 @@ body{
  * Basic styles for links
  */
 a {
-  color: $red;
+  color: $purple;
   text-decoration: none;
 }
 
