--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -28,6 +28,11 @@
                 font-size: 1.5rem;
                 letter-spacing: 3px;
             }
+            @include media-breakpoint-down(sm){
+                position: absolute;
+                left: 50%;
+                margin-left: -50px;
+            }
             .tagline{
                 font-size: 0.7rem;
                 font-weight: 300;
@@ -45,6 +50,22 @@
             }
             &:focus {
                 outline: none;
+            }
+        }
+    }
+    .dropdown{
+        &-menu{
+            background-color: $navbar-color;
+            border-radius: 0;
+            
+        }
+        &-item{
+            color: #FFFFFF;
+            font-family: $navbar-font-family;
+            font-weight: $font-weight-light;
+            &:hover{
+                background-color: $navbar-color;
+                color: $gray-200;
             }
         }
     }
